# LeDream

./: .gitignore  .gitmodules  Makefile  README.md  dominique_notes.md  ledream_changelog.md
configs/: pcb100x_act.json  pcb100x_dp.json
dreamhub/: README.md
homepage/: README.md
homepage/src/app/: page.tsx
ledream/: .gitignore  recording_loop_lag_report_2026-02-27.md
lerobot/scripts/: check_dataset_indices.py
research-os/: QUESTIONS.md  SPEC.md  ecosystem.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
research-os/_archive/: index.html
research-os/_archive/css/: sidebar.css
research-os/_archive/js/: sidebar.js
research-os/_archive/methods/: cql.html  dreamer.html  dreamerv2.html  dreamerv3.html  planet.html  rlhf.html  robot-controllers.html  sac.html  vjepa.html  vjepa2.html  world-models.html
research-os/src/app/: globals.css  layout.tsx  page.module.css  page.tsx  providers.tsx
research-os/src/components/: ResearchSidebar.tsx  Shell.tsx  Sidebar.tsx
rl-experimentation/: README.md  gym1.py  pyproject.toml
rl-experimentation/gymnasium_tutorial/: .gitignore  OVERVIEW.md  QUICKSTART.md  README.md  demo_visual.py  gymnasium_quickstart.ipynb  quickstart_ppo.py  test_setup.py
rl-experimentation/mujoco_tutorial/: mujoco_tutorial.ipynb  pyproject.toml
rl-experimentation/mujoco_tutorial/models/: cart_pole.xml  contact_scene.xml  double_pendulum.xml  reacher.xml  simple_pendulum.xml
scripts/: birest.py  cam_tuner.py  check_recording_gaps.py  predecode_videos.py  repair_dataset_episodes_metadata.py  snapshot.py
(+85 files in other folders)
